            "type": "keyword",
            "index": true
        }
    }
}
----

CAUTION: The `unfilteredCount` GraphQL paging property has been removed. You can now use the `totalCount` property instead.

CAUTION: Gentics Mesh will automatically extract and start an embedded Elasticsearch server into the `elasticsearch` folder. The old search index (e.g: `data/searchIndex`) can be removed. 

icon:plus[] REST: The UUID of the referenced binary data will now also be listed for binary fields. Fields which share the same binary data will also share the same binary UUID.

icon:plus[] GraphQL: It is now possible to read the focal point information and binary uuid of binary fields.

icon:plus[] Docs: The link:elasticsearch.html[Elasticsearch integration documentation] has been enhanced.

icon:plus[] Search: The overall search performance has been increased.

icon:plus[] Logging: The logging verbosity has been further decreased.

[[v0.14.2]]
== 0.14.2 (30.01.2018)

icon:check[] Elasticsearch: Fixed a bug which caused an internal error when granting multiple permissions to the same element at the same time.

icon:check[] GraphQL: The `linkType` parameter for string and html fields now causes the the link to be rendered in the language of the queried node if no language information is given.

[[v0.14.1]]
== 0.14.1 (19.01.2018)

icon:check[] Core: Fixed a deadlock situation which could occur when handling more than 20 image resize requests in parallel. Image resize operations will now utilize a dedicated thread pool.

icon:check[] Core: Fixed a bug which caused permission inconsistencies when deleting a group from the system.

icon:plus[] REST: Added support to automatically handle the `Expect: 100-Continue` header. We however recommend to only use this header for upload requests.
Using this header will otherwise reduce the response times of your requests. Note that PHP curl will add this header by default.